# embrace-ai

./: .coverage  .env.secret.sample  .gitignore  CLAUDE.md  Makefile  hello.py  notes.md  pyproject.toml
.claude/commands/: explain.md
src/: hello.py
src/embrace_ai_katas/timetoact/: README.md  __init__.py  __main__.py  cli.py  models.py  parser.py  tokenizer.py
tasks/: todo.md
tests/: test_hello.py  test_hellp.py
tests/test_timetoact/: test_edge_cases.py  test_models.py  test_parser.py  test_spec_compliance.py  test_tokenizer.py
