[project]
name = "embrace-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mypy>=1.17.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError"
]
show_missing = true
skip_covered = false